--- a/index_form.html
+++ b/index_form.html
@@ -7,7 +7,7 @@
   <title>おみくじアプリケーション</title>
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900&display=swap" rel="stylesheet">
   
   <!-- Material Design Icons -->
   <link href="https://cdn.jsdelivr.net/npm/@mdi/font/css/materialdesignicons.min.css" rel="stylesheet">
@@ -106,7 +106,7 @@
       methods: {
         async fetchFortuneResults() {
           try {
-            const response = await fetch('https://m3h-tomoki-3appfunctionapiapp.azurewebsites.net/api/GET_FORTUNE_RESULTS');
+            const response = await fetch('https://your-api-endpoint.azurewebsites.net/api/GET_FORTUNE_RESULTS');
             const data = await response.json();
             this.fortunes = data.map(item => item.Result);
           } catch (error) {
