--- a/index_form.html
+++ b/index_form.html
@@ -1,24 +1,15 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="おみくじアプリケーション">
-  <title>おみくじアプリケーション</title>
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900&display=swap" rel="stylesheet">
-  
-  <!-- Material Design Icons -->
-  <link href="https://cdn.jsdelivr.net/npm/@mdi/font/css/materialdesignicons.min.css" rel="stylesheet">
-  
-  <!-- Vuetify CSS -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
-
-  <!-- Custom Styles -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
+  <title>おみくじアプリケーション</title>
   <style>
-    body {
-      font-family: 'Roboto', sans-serif;
+    [v-cloak] {
+      display: none;
     }
 
     #app {
@@ -36,19 +27,30 @@
       text-align: center;
     }
 
-    .showResult_text {
+    .textArea {
+      position: absolute;
+      top: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    .showReseult_text {
       margin-top: 10px;
       font-family: "MS Mincho", serif;
       font-weight: 1000;
       font-size: 150px;
+      white-space: nowrap; 
       background-color: antiquewhite;
       animation: zoomIn 0.5s forwards ease-in-out;
       opacity: 0;
     }
 
-    .shareButton_X {
+    .shareBotton_X {
       background-color: black !important;
       color: white !important;
+    }
+
+    span {
+      font-weight: 1000;
     }
 
     @keyframes zoomIn {
@@ -64,30 +66,28 @@
   </style>
 </head>
 <body>
-  <div id="app">
-    <v-app>
-      <div class="fortuneArea">
-        <v-btn large color="green" @click="drawFortune" class="fortuneBotton">
-          <span>早速占う</span>
-        </v-btn>
-        <p v-if="showResult" :key="resultKey" class="showResult_text">{{ fortuneResult }}</p>
-        <v-btn v-if="showResult" large @click="shareResult" class="shareButton_X">
-          <v-icon left>mdi-twitter</v-icon>
-          結果をXでシェアする
-        </v-btn>
-      </div>
-    </v-app>
+  <div id="app" v-cloak>
+    <div class="fortuneArea">
+      <v-app>
+        <div class="textArea">
+          <v-btn large color="green" @click="drawFortune" class="fortuneBotton"><span>早速占う</span></v-btn>
+          <p v-if="showResult" :key="resultKey" class="showReseult_text">{{ fortuneResult }}</p>
+          <v-btn v-if="showResult" large @click="shareResult" class="shareBotton_X">
+            <v-icon left>mdi-twitter</v-icon>
+            結果をXでシェアする
+          </v-btn>
+        </div>
+      </v-app>
+    </div>
   </div>
 
+  <!-- Audio要素を追加 -->
   <audio id="clickSound">
     <source src="Ou_sound.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 
-  <!-- Vue.js -->
   <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
-  
-  <!-- Vuetify JS -->
   <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
 
   <script>
@@ -95,35 +95,45 @@
       el: '#app',
       vuetify: new Vuetify(),
       data: {
-        fortunes: [],
+        fortunes: ['大吉', '中吉', '小吉', '吉', '凶', '大凶'],
         fortuneResult: '',
         showResult: false,
-        resultKey: ''
-      },
-      created() {
-        this.fetchFortuneResults();
+        resultKey: '', // 結果ごとに異なるキーを設定するための変数
       },
       methods: {
-        async fetchFortuneResults() {
-          try {
-            const response = await fetch('https://your-api-endpoint.azurewebsites.net/api/GET_FORTUNE_RESULTS');
-            const data = await response.json();
-            this.fortunes = data.map(item => item.Result);
-          } catch (error) {
-            console.error('Error fetching fortune results:', error);
-          }
-        },
-        drawFortune() {
+        async drawFortune() {
+          // サウンドを再生
           this.playClickSound();
 
+          // ランダムな結果を生成
           const randomIndex = Math.floor(Math.random() * this.fortunes.length);
           this.fortuneResult = this.fortunes[randomIndex];
           this.showResult = true;
-          this.resultKey = Date.now().toString(); // Generate a unique key for each result display
+          this.resultKey = Date.now().toString(); // 異なるキーを生成
+
+          // APIにおみくじの結果を送信
+          try {
+            const response = await fetch('https://m3h-tomoki-3appfunctionapiapp.azurewebsites.net/api/INSERT_FORTUNE', {
+              method: 'POST',
+              headers: {
+                'Content-Type': 'application/json'
+              },
+              body: JSON.stringify({ Result: this.fortuneResult })
+            });
+
+            if (!response.ok) {
+              throw new Error('Network response was not ok.');
+            }
+
+            const result = await response.json();
+            console.log(result);
+          } catch (error) {
+            console.error('Error:', error);
+          }
         },
         shareResult() {
           const textToShare = `今日のおみくじの結果は「${this.fortuneResult}」でした！`;
-          const urlToShare = 'https://your-website-url.com/';
+          const urlToShare = 'https://equal-love.jp/';
           const twitterUrl = `https://twitter.com/intent/tweet?text=${encodeURIComponent(textToShare)}&url=${encodeURIComponent(urlToShare)}`;
           window.open(twitterUrl, '_blank');
         },
