--- a/index_form.html
+++ b/index_form.html
@@ -122,13 +122,15 @@
             });
 
             if (!response.ok) {
-              throw new Error('Network response was not ok.');
+              const errorText = await response.text();
+              throw new Error(`Network response was not ok. Error: ${errorText}`);
             }
 
             const result = await response.json();
             console.log(result);
           } catch (error) {
-            console.error('Error:', error);
+            console.error('Error:', error.message);
+            alert(`エラーが発生しました: ${error.message}`);
           }
         },
         shareResult() {
