--- a/index_form.html
+++ b/index_form.html
@@ -2,90 +2,35 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
-  <title>おみくじアプリケーション</title>
-  <style>
-    [v-cloak] {
-      display: none;
-    }
-
-    #app {
-      position: relative;
-      height: 100vh;
-      background-image: url('kadai_shrine.jpg');
-      background-size: cover;
-    }
-
-    .fortuneArea {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      text-align: center;
-    }
-
-    .textArea {
-      position: absolute;
-      top: 50%;
-      transform: translate(-50%, -50%);
-    }
-
-    .showResult_text {
-      margin-top: 10px;
-      font-family: "MS Mincho", serif;
-      font-weight: 1000;
-      font-size: 150px;
-      white-space: nowrap;
-      background-color: antiquewhite;
-      animation: zoomIn 0.5s forwards ease-in-out;
-      opacity: 0;
-    }
-
-    .shareButton_X {
-      background-color: black !important;
-      color: white !important;
-    }
-
-    span {
-      font-weight: 1000;
-    }
-
-    @keyframes zoomIn {
-      0% {
-        transform: scale(0.1);
-        opacity: 0;
-      }
-      100% {
-        transform: scale(1);
-        opacity: 1;
-      }
-    }
-  </style>
+  <title>おみくじアプリ</title>
+  <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
 </head>
 <body>
-  <div id="app" v-cloak>
-    <div class="fortuneArea">
-      <v-app>
-        <div class="textArea">
-          <v-btn large color="green" @click="drawFortune" class="fortuneButton"><span>早速占う</span></v-btn>
-          <p v-if="showResult" :key="resultKey" class="showResult_text">{{ fortuneResult }}</p>
-          <v-btn v-if="showResult" large @click="shareResult" class="shareButton_X">
-            <v-icon left>mdi-twitter</v-icon>
-            結果をXでシェアする
-          </v-btn>
-        </div>
-      </v-app>
-    </div>
+  <div id="app">
+    <v-app>
+      <v-container>
+        <v-row>
+          <v-col cols="12" class="text-center">
+            <v-btn @click="getFortune" color="primary">おみくじを引く</v-btn>
+          </v-col>
+        </v-row>
+        <v-row>
+          <v-col cols="12" class="text-center">
+            <v-card v-if="fortuneResult">
+              <v-card-title>おみくじの結果</v-card-title>
+              <v-card-subtitle>{{ fortuneResult }}</v-card-subtitle>
+            </v-card>
+          </v-col>
+        </v-row>
+        <v-row>
+          <v-col cols="12" class="text-center">
+            <v-btn @click="saveFortune" color="secondary">結果を保存する</v-btn>
+          </v-col>
+        </v-row>
+      </v-container>
+    </v-app>
   </div>
-
-  <!-- Audio要素を追加 -->
-  <audio id="clickSound">
-    <source src="Ou_sound.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-  </audio>
 
   <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
@@ -94,24 +39,34 @@
     new Vue({
       el: '#app',
       vuetify: new Vuetify(),
-      data: {
-        fortunes: ['大吉', '中吉', '小吉', '吉', '凶', '大凶'],
-        fortuneResult: '',
-        showResult: false,
-        resultKey: '', // 結果ごとに異なるキーを設定するための変数
+      data() {
+        return {
+          fortuneResult: null,
+        };
       },
       methods: {
-        async drawFortune() {
-          // サウンドを再生
-          this.playClickSound();
+        async getFortune() {
+          try {
+            const response = await fetch('https://<your-function-url>/GET_FORTUNE_RESULTS');
+            const results = await response.json();
+            if (results.length > 0) {
+              // ランダムに結果を選ぶ
+              const randomIndex = Math.floor(Math.random() * results.length);
+              this.fortuneResult = results[randomIndex];
+            } else {
+              this.fortuneResult = 'おみくじの結果がありません';
+            }
+          } catch (error) {
+            console.error('Error fetching fortune:', error);
+            this.fortuneResult = 'おみくじの取得に失敗しました';
+          }
+        },
+        async saveFortune() {
+          if (!this.fortuneResult) {
+            alert('おみくじの結果がまだありません');
+            return;
+          }
 
-          // ランダムな結果を生成
-          const randomIndex = Math.floor(Math.random() * this.fortunes.length);
-          this.fortuneResult = this.fortunes[randomIndex];
-          this.showResult = true;
-          this.resultKey = Date.now().toString(); // 異なるキーを生成
-
-          // APIにおみくじの結果を送信
           try {
             const response = await fetch('https://m3h-tomoki-3appfunctionapiapp.azurewebsites.net/api/INSERT_FORTUNE', {
               method: 'POST',
@@ -121,27 +76,12 @@
               body: JSON.stringify({ Result: this.fortuneResult })
             });
 
-            if (!response.ok) {
-              const errorText = await response.text();
-              throw new Error(`Network response was not ok. Error: ${errorText}`);
-            }
-
-            const result = await response.json();
-            console.log(result);
+            const result = await response.text();
+            alert(result);
           } catch (error) {
-            console.error('Error:', error.message);
-            alert(`エラーが発生しました: ${error.message}`);
+            console.error('Error saving fortune:', error);
+            alert('おみくじの保存に失敗しました');
           }
-        },
-        shareResult() {
-          const textToShare = `今日のおみくじの結果は「${this.fortuneResult}」でした！`;
-          const urlToShare = 'https://equal-love.jp/';
-          const twitterUrl = `https://twitter.com/intent/tweet?text=${encodeURIComponent(textToShare)}&url=${encodeURIComponent(urlToShare)}`;
-          window.open(twitterUrl, '_blank');
-        },
-        playClickSound() {
-          const audio = document.getElementById('clickSound');
-          audio.play();
         }
       }
     });
