--- a/index_form.html
+++ b/index_form.html
@@ -47,7 +47,7 @@
       methods: {
         async getFortune() {
           try {
-            const response = await fetch('https://<your-function-url>/GET_FORTUNE_RESULTS');
+            const response = await fetch('https://m3h-tomoki-3appfunctionapiapp.azurewebsites.net/api/GET_FORTUNE_RESULTS');
             const results = await response.json();
             if (results.length > 0) {
               // ランダムに結果を選ぶ
