--- a/index_form.html
+++ b/index_form.html
@@ -10,44 +10,31 @@
   <div id="app">
     <v-app>
       <v-container>
-        <v-row>
-          <v-col cols="12" class="text-center">
-            <v-btn @click="getFortune" color="primary">おみくじを引く</v-btn>
-          </v-col>
-        </v-row>
-        <v-row>
-          <v-col cols="12" class="text-center">
-            <v-card v-if="fortuneResult">
-              <v-card-title>おみくじの結果</v-card-title>
-              <v-card-subtitle>{{ fortuneResult }}</v-card-subtitle>
-            </v-card>
-          </v-col>
-        </v-row>
-        <v-row>
-          <v-col cols="12" class="text-center">
-            <v-btn @click="saveFortune" color="secondary">結果を保存する</v-btn>
-          </v-col>
-        </v-row>
+        <v-btn @click="getFortune">おみくじを引く</v-btn>
+        <v-card v-if="fortuneResult" class="mt-4">
+          <v-card-title>おみくじの結果</v-card-title>
+          <v-card-subtitle>{{ fortuneResult }}</v-card-subtitle>
+        </v-card>
       </v-container>
     </v-app>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
-
+  
   <script>
     new Vue({
       el: '#app',
       vuetify: new Vuetify(),
       data() {
         return {
-          fortuneResult: null,
+          fortuneResult: null
         };
       },
       methods: {
         async getFortune() {
           try {
-            const response = await fetch('https://m3h-tomoki-3appfunctionapiapp.azurewebsites.net/api/GET_FORTUNE_RESULTS');
+            const response = await fetch('https://<your-function-url>/api/GET_FORTUNE_RESULTS');
             const results = await response.json();
             if (results.length > 0) {
               // ランダムに結果を選ぶ
@@ -59,28 +46,6 @@
           } catch (error) {
             console.error('Error fetching fortune:', error);
             this.fortuneResult = 'おみくじの取得に失敗しました';
-          }
-        },
-        async saveFortune() {
-          if (!this.fortuneResult) {
-            alert('おみくじの結果がまだありません');
-            return;
-          }
-
-          try {
-            const response = await fetch('https://m3h-tomoki-3appfunctionapiapp.azurewebsites.net/api/INSERT_FORTUNE', {
-              method: 'POST',
-              headers: {
-                'Content-Type': 'application/json'
-              },
-              body: JSON.stringify({ Result: this.fortuneResult })
-            });
-
-            const result = await response.text();
-            alert(result);
-          } catch (error) {
-            console.error('Error saving fortune:', error);
-            alert('おみくじの保存に失敗しました');
           }
         }
       }
