--- a/index_form.html
+++ b/index_form.html
@@ -16,12 +16,12 @@
               <v-card-title class="text-h5">おみくじアプリ</v-card-title>
               <v-card-subtitle>結果を取得して表示します</v-card-subtitle>
               <v-card-actions>
-                <v-btn @click="fetchFortuneResults" color="primary">おみくじを引く</v-btn>
+                <v-btn @click="fetchFortuneResult" color="primary">おみくじを引く</v-btn>
               </v-card-actions>
               <v-card-text>
                 <v-list>
                   <v-list-item v-if="result">
-                    {{ result }}
+                    <v-list-item-content>{{ result }}</v-list-item-content>
                   </v-list-item>
                   <v-list-item v-else>
                     <v-list-item-content>結果がありません</v-list-item-content>
@@ -48,14 +48,14 @@
         };
       },
       methods: {
-        async fetchFortuneResults() {
+        async fetchFortuneResult() {
           try {
-            const response = await fetch('https://m3h-tomoki-3appfunctionapiapp.azurewebsites.net/api/GET_FORTUNE_RESULTS');
+            const response = await fetch('https://m3h-tomoki-3appfunctionapiapp.azurewebsites.net/api/GET_FORTUNE_RESULT');
             if (!response.ok) {
               throw new Error('ネットワークエラー');
             }
             const data = await response.json();
-            this.result = data;
+            this.result = data.Result;
           } catch (error) {
             console.error('エラー:', error);
             alert('おみくじの結果を取得できませんでした。');
