--- a/index_form.html
+++ b/index_form.html
@@ -21,10 +21,10 @@
               <v-card-text>
                 <v-list>
                   <v-list-item v-if="result">
-                    <v-list-item-content>{{ result }}</v-list-item-content>
+                    {{ result }}
                   </v-list-item>
                   <v-list-item v-else>
-                    <v-list-item-content>結果がありません</v-list-item-content>
+                    結果がありません
                   </v-list-item>
                 </v-list>
               </v-card-text>
@@ -52,13 +52,14 @@
           try {
             const response = await fetch('https://m3h-tomoki-3appfunctionapiapp.azurewebsites.net/api/GET_FORTUNE_RESULT');
             if (!response.ok) {
-              throw new Error('ネットワークエラー');
+              const errorData = await response.json();
+              throw new Error(errorData.Message || 'ネットワークエラー');
             }
             const data = await response.json();
             this.result = data.Result;
           } catch (error) {
             console.error('エラー:', error);
-            alert('おみくじの結果を取得できませんでした。');
+            alert(`おみくじの結果を取得できませんでした。エラー: ${error.message}`);
           }
         }
       }
