--- a/index_form.html
+++ b/index_form.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
-  <title>おみくじアプリ</title>
+  <title>おみくじサイト</title>
   <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
 </head>
 <body>
   <div id="app">
@@ -13,20 +15,14 @@
         <v-row>
           <v-col cols="12" md="6" offset-md="3">
             <v-card>
-              <v-card-title class="text-h5">おみくじアプリ</v-card-title>
-              <v-card-subtitle>結果を取得して表示します</v-card-subtitle>
+              <v-card-title class="headline">おみくじを引く</v-card-title>
+              <v-card-subtitle>ボタンをクリックしておみくじを引いてください。</v-card-subtitle>
               <v-card-actions>
-                <v-btn @click="fetchFortuneResult" color="primary">おみくじを引く</v-btn>
+                <v-btn @click="getFortune" color="primary">おみくじを引く</v-btn>
               </v-card-actions>
               <v-card-text>
-                <v-list>
-                  <v-list-item v-if="result">
-                    {{ result }}
-                  </v-list-item>
-                  <v-list-item v-else>
-                    結果がありません
-                  </v-list-item>
-                </v-list>
+                <v-alert v-if="fortuneResult" type="success">{{ fortuneResult }}</v-alert>
+                <v-alert v-if="error" type="error">{{ error }}</v-alert>
               </v-card-text>
             </v-card>
           </v-col>
@@ -35,31 +31,34 @@
     </v-app>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
-
   <script>
     new Vue({
       el: '#app',
       vuetify: new Vuetify(),
       data() {
         return {
-          result: null
+          fortuneResult: '',
+          error: ''
         };
       },
       methods: {
-        async fetchFortuneResult() {
+        async getFortune() {
           try {
-            const response = await fetch('https://m3h-tomoki-3appfunctionapiapp.azurewebsites.net/api/GET_FORTUNE_RESULT');
-            if (!response.ok) {
-              const errorData = await response.json();
-              throw new Error(errorData.Message || 'ネットワークエラー');
+            const response = await fetch('https://<your-function-app>.azurewebsites.net/api/GET_FORTUNE_RESULT', {
+              method: 'GET'
+            });
+
+            const result = await response.json();
+            if (response.ok) {
+              this.fortuneResult = result.Result;
+              this.error = '';
+            } else {
+              this.fortuneResult = '';
+              this.error = 'おみくじの結果が取得できませんでした。';
             }
-            const data = await response.json();
-            this.result = data.Result;
           } catch (error) {
-            console.error('エラー:', error);
-            alert(`おみくじの結果を取得できませんでした。エラー: ${error.message}`);
+            this.fortuneResult = '';
+            this.error = 'ネットワークエラーが発生しました。';
           }
         }
       }
