--- a/index_form.html
+++ b/index_form.html
@@ -44,7 +44,7 @@
       methods: {
         async getFortune() {
           try {
-            const response = await fetch('https://<your-function-app>.azurewebsites.net/api/GET_FORTUNE_RESULT', {
+            const response = await fetch('https://m3h-tomoki-3appfunctionapiapp.azurewebsites.net/api/GET_FORTUNE_RESULT', {
               method: 'GET'
             });
 
