--- a/index_form.html
+++ b/index_form.html
@@ -5,24 +5,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
   <title>おみくじサイト</title>
   <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
+  <style>
+    .v-application--wrap {
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+    }
+  </style>
 </head>
 <body>
   <div id="app">
     <v-app>
       <v-container>
-        <v-row>
-          <v-col cols="12" md="6" offset-md="3">
+        <v-row class="d-flex justify-center">
+          <v-col cols="12" sm="6" md="4">
             <v-card>
-              <v-card-title class="headline">おみくじを引く</v-card-title>
-              <v-card-subtitle>ボタンをクリックしておみくじを引いてください。</v-card-subtitle>
+              <v-card-title class="headline">おみくじサイト</v-card-title>
+              <v-card-subtitle>おみくじを引いて結果を見てみましょう！</v-card-subtitle>
               <v-card-actions>
-                <v-btn @click="getFortune" color="primary">おみくじを引く</v-btn>
+                <v-btn @click="getFortune" color="primary" block>おみくじを引く</v-btn>
               </v-card-actions>
               <v-card-text>
-                <v-alert v-if="fortuneResult" type="success">{{ fortuneResult }}</v-alert>
-                <v-alert v-if="error" type="error">{{ error }}</v-alert>
+                <v-alert v-if="fortuneResult" type="success" border="left">
+                  <v-icon>mdi-luck</v-icon>
+                  <span>{{ fortuneResult }}</span>
+                </v-alert>
+                <v-alert v-else type="info" border="left">
+                  おみくじの結果がここに表示されます。
+                </v-alert>
               </v-card-text>
             </v-card>
           </v-col>
@@ -31,34 +41,40 @@
     </v-app>
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
   <script>
     new Vue({
       el: '#app',
       vuetify: new Vuetify(),
       data() {
         return {
-          fortuneResult: '',
-          error: ''
+          fortuneResult: null
         };
       },
       methods: {
         async getFortune() {
           try {
-            const response = await fetch('https://m3h-tomoki-3appfunctionapiapp.azurewebsites.net/api/GET_FORTUNE_RESULT', {
-              method: 'GET'
-            });
+            // APIのURL（適切なURLに置き換えてください）
+            const apiUrl = 'https://m3h-tomoki-3appfunctionapiapp.azurewebsites.net/api/GET_FORTUNE_RESULT';
 
-            const result = await response.json();
-            if (response.ok) {
-              this.fortuneResult = result.Result;
-              this.error = '';
-            } else {
-              this.fortuneResult = '';
-              this.error = 'おみくじの結果が取得できませんでした。';
+            // APIからデータを取得
+            const response = await fetch(apiUrl);
+            
+            if (!response.ok) {
+              throw new Error(`HTTPエラー！ ステータスコード: ${response.status}`);
             }
+
+            // JSON形式でレスポンスを解析
+            const data = await response.json();
+
+            // 結果を表示
+            this.fortuneResult = data.FortuneResult;
+
           } catch (error) {
-            this.fortuneResult = '';
-            this.error = 'ネットワークエラーが発生しました。';
+            // エラーが発生した場合
+            console.error('エラー:', error);
+            this.fortuneResult = 'おみくじ結果を取得できませんでした。';
           }
         }
       }
