--- a/index_form.html
+++ b/index_form.html
@@ -20,7 +20,7 @@
         <v-row class="d-flex justify-center">
           <v-col cols="12" sm="6" md="4">
             <v-card>
-              <v-card-title class="headline">開運おみくじサイト</v-card-title>
+              <v-card-title class="headline">おみくじサイト</v-card-title>
               <v-card-subtitle>おみくじを引いて結果を見てみましょう！</v-card-subtitle>
               <v-card-actions>
                 <v-btn @click="getFortune" color="primary" block>おみくじを引く</v-btn>
