--- a/index_form.html
+++ b/index_form.html
@@ -70,7 +70,7 @@
             console.log(data);  
 
             // 結果を表示
-            this.fortuneResult = data.FortuneResult;
+            this.fortuneResult = data.fortuneResult;
 
           } catch (error) {
             // エラーが発生した場合
